<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/registrationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="50dp"
                android:text="Account Registration"
                android:textColor="#2196F3"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="text"
                android:hint="Name"
                android:ems="11" />

            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="phone"
                android:hint="Phone"
                android:ems="11" />

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:ems="11" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:inputType="textPassword"
                android:hint="Password"
                android:ems="11" />

            <Spinner
                android:id="@+id/roleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:entries="@array/ROLE_VALUES" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:ems="11"
                android:text="Register"
                android:backgroundTint="#2196f3" />

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:animateLayoutChanges="true"
                android:textColor="#D90317"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>