...
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="Create Job Posting"
                android:textColor="#2196F3"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/jobCompanyBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/jobCompanyBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:hint="Company Name"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/jobTitleBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobPostingUiTitle" />

            <EditText
                android:id="@+id/jobTitleBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:inputType="text"
                android:hint="Job Title"
                app:layout_constraintBottom_toTopOf="@+id/jobDescriptionBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobCompanyBox" />

            <EditText
                android:id="@+id/jobDescriptionBox"
...
                android:hint="Job Description"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/jobTypeSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobTitleBox" />

            <Spinner
                android:id="@+id/jobTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:entries="@array/job_types"
                app:layout_constraintBottom_toTopOf="@+id/experienceSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobDescriptionBox" />

            <Spinner
                android:id="@+id/experienceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:entries="@array/experience_levels"
                app:layout_constraintBottom_toTopOf="@+id/jobIndustryBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobTypeSpinner" />

            <EditText
                android:id="@+id/jobIndustryBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:inputType="text"
                android:hint="Job Industry (e.g. Technology)"
                app:layout_constraintBottom_toTopOf="@+id/jobLocationBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/experienceSpinner" />

            <EditText
                android:id="@+id/jobLocationBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:inputType="text"
                android:hint="City, Province, Country"
                app:layout_constraintBottom_toTopOf="@+id/submitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobIndustryBox" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#2196F3"
                android:text="Create Posting"
                app:layout_constraintBottom_toTopOf="@+id/statusLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobLocationBox" />

            <TextView
                android:id="@+id/statusLabel"
...
