...
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="Quick Cash"
                android:textColor="#2196F3"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/roleSelectionSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/roleSelectionSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:entries="@array/ROLE_VALUES"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toTopOf="@+id/emailAddressEditField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appTitle" />

            <EditText
                android:id="@+id/emailAddressEditField"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roleSelectionSpinner" />

            <EditText
                android:id="@+id/passwordEditField"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailAddressEditField" />

            <Button
                android:id="@+id/loginButton"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/statusLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" >

                <Button
                    android:id="@+id/createAccountButton"
...
